added background image, github links to html, named title and added description

--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Stock Globe Trotter</title>
+  <img src="assets/Images/stockimageheader.jpg"alt="stock header"> <width:100></width:100>
+
+
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="../../dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="https://github.com/evan-hatley/StockGlobetrotter"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
+ 
+
+
+  <div class="User Story (I will rename this)">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">AS AN Investor who travels
+            I WANT to keep track of my stock's exchange rate for where I am
+            SO I know my stock's value in relation to my location.
+            
+            </h5>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer class="page-footer teal">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Globe Stock Trotter</h5>
+          <p class="grey-text text-lighten-4">Hello! This is a collaborative project between 4 students enrolled in a Full Stack Bootcamp through KU! </p>
+
+
     
-</body>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="Evan Hatley" href="#!">https://github.com/evan-hatley</a></li>
+            <li><a class="Kayleena Bellew" href="#!">https://github.com/KKBellew</a></li>
+            <li><a class="Dylan Osborn" href="#!">https://github.com/DylanOzzy</a></li>
+            <li><a class="Maya Hernandez" href="#!">https://github.com/MayaH2000</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="../../dist/js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
+  </body>
 </html>
