--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../../dist/js/materialize.js"></script>
-  <script src="js/init.js"></script>
-
+  <script src="assets/script.js"></script>
   </body>
 </html>
