modified background image and pixel size in html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       </div>
     </div>
-    <div class="stockimageheader"><img src="assets/Images/background1.jpg" alt="stock Globe"></div>
+    <div class="stockimageheader"><img src="assets/Images/background1.jpg" width="1920px"; height="1080px" alt="stock Globe"></div>
   </div>
 
 
@@ -89,7 +89,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="assets/Images/background2.jpg" alt="background img 2"></div>
+    <div class="parallax"><img src="assets/Images/background2.jpg" width="1920px"; height="1080px" alt="background img 2"></div>
   </div>
 
   <div class="container">
@@ -115,7 +115,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="assets/Images/background3.jpg" alt="background img 3"></div>
+    <div class="parallax"><img src="assets/Images/background3.jpg" width="1920px"; height="1080px" alt="background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
