--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="../../dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="assets/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">  <link href="assets/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 
   <nav class="white" role="navigation">
@@ -143,8 +142,7 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="../../dist/js/materialize.js"></script>
-  <script src="assets/script.js"></script>
+  script type="text/javascript" src="js/materialize.min.js"></script>  <script src="assets/script.js"></script>
   </body>
 </html>
 
