modified html to accomodate changes to css

--- a/index.html
+++ b/index.html
@@ -34,13 +34,7 @@
     <img src="assets/Images/background1.jpg" alt="stock Globe">
   </div>
 
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-
+  
       <ul id="nav-mobile" class="sidenav">
         <li><a href="#">Navbar Link</a></li>
       </ul>
@@ -57,7 +51,7 @@
           <h5 class="header col s12 light"></h5>
         </div>
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+          <a href="https://github.com/evan-hatley/StockGlobetrotter" id="github repository" class="btn-large waves-effect waves-light teal lighten-1">Github Repository</a>
         </div>
         <br><br>
 
@@ -99,7 +93,19 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Stock Globe Trotter Repository</h4>
+          <h4>About Stock Globe Trotter </h4>
+           <h5>User Story</h5>
+           <p> AS AN Investor who travels
+            I WANT to keep track of my stock's exchange rate for where I am
+            SO I know my stock's value in relation to my location. </p>
+            <h5>Technologies Used</h5>
+            <p>The two APIs we used in this project are the NASDAQ Data API and ExchangeRates API</p>
+            <ul>
+              <li><a href="https://exchangeratesapi.io/">ExchangeRatesAPI</a></li>
+              <li><a href="https://docs.data.nasdaq.com/">NASDAQ Data</a></li>
+          
+            </ul>
+          
           <p class="left-align light"></p>
         </div>
       </div>
