--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Stock Globe Trotter</title>
 
-  <!-- CSS  -->
+  <!-- CSS -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="../../dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../../dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> 
   <link href="assets/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
 </head>
+<body>
+   <!-- GitHub Links on the right side -->
+   <div class="github-links">
+    <h4>Connect with us!</h4>
+    <ul>
+      <li><a href="https://github.com/evan-hatley">Evan Hatley</a></li>
+      <li><a href="https://github.com/KKBellew">Kayleena Bellew</a></li>
+      <li><a href="https://github.com/DylanOzzy">Dylan Osborn</a></li>
+      <li><a href="https://github.com/MayaH2000">Maya Hernandez</a></li>
+    </ul>
+  </div>
+
+   <!--jumbotron title-->
+   <div class="jumbotron container-fluid mt-2 text-center p-2" style="background-image: linear-gradient(50deg, #079ed8 0%, #0160a2 100%);;">
+    <h1> <strong>Stock Globe Trotter</strong></h1>
+</div>
+
+  <div class="stockimageheader">
+    <img src="assets/Images/background1.jpg" alt="stock Globe">
+  </div>
 
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
@@ -40,72 +63,48 @@
 
       </div>
     </div>
-    <div class="stockimageheader"><img src="assets/Images/background1.jpg" alt="stock Globe"></div>
   </div>
-
 
   <div class="container">
     <div class="section">
-
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Speeds up development</h5>
-
             <p class="light"></p>
           </div>
         </div>
-
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
             <h5 class="center">User Experience Focused</h5>
-
             <p class="light"></p>
           </div>
         </div>
-
         <div class="col s12 m4">
-          <div class="icon-block">
+          <div class= "icon-block">
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
             <h5 class="center"></h5>
-
             <p class="light"></p>
           </div>
         </div>
       </div>
-
     </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light"></h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="assets/Images/background2.jpg" alt="background img 2"></div>
   </div>
 
   <div class="container">
     <div class="section">
-
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Stock Globe Trotter Repository</h4>
-          <p class="left-align light">;</p>
+          <p class="left-align light"></p>
         </div>
       </div>
-
     </div>
   </div>
-
 
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
@@ -115,8 +114,9 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="assets/Images/background3.jpg" alt="background img 3"></div>
+    <div class="parallax"></div>
   </div>
+
 
   <footer class="page-footer teal">
     <div class="container">
@@ -124,27 +124,15 @@
         <div class="col l6 s12">
           <h5 class="white-text"></h5>
           <p class="grey-text text-lighten-4"></p>
-
-
-       
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="Evan Hatley" href="#!">https://github.com/evan-hatley</a></li>
-            <li><a class="Kayleena Bellew" href="#!">https://github.com/KKBellew</a></li>
-            <li><a class="Dylan Osborn" href="#!">https://github.com/DylanOzzy</a></li>
-            <li><a class="Maya Hernandez" href="#!">https://github.com/MayaH2000</a></li>
-          </ul>
         </div>
       </div>
     </div>
   </footer>
 
-
-  <!--  Scripts-->
+  <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="../../dist/js/materialize.js"></script>
-  <script src="assets/script.js"></script>
+ <script src="../../dist/js/materialize.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script> 
+<script src="assets/script.js"></script>
   </body>
 </html>
-
