created close button function  for the github links, modified style.css, javascript, and index.h tml accordingly

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
 <!-- GitHub Links on the right side -->
 <div class="github-links">
+    <!-- Close button -->
+    <span class="close-button" id="close-button">X</span>
   <h4>Connect with us!</h4>
   <!-- Add Button that can be used by java script to close the section. -->
   <ul>
