--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
       <div class="row center">
         <h5 class="header col s12 light"></h5>
       </div>
-      <div class="row center">
-        <a href="https://github.com/evan-hatley/StockGlobetrotter" id="github repository" class="btn-large waves-effect waves-light teal lighten-1">Github Repository</a>
-      </div>
-      <!-- Made Contact Us button to Display Contact Information -->
-      <div class="row center">
+      <div class="contact-section">
+        <a href="https://github.com/evan-hatley/StockGlobetrotter" class="btn-large waves-effect waves-light teal lighten-1">Github Repository</a>
+        <!-- Made Contact Us button to Display Contact Information -->
         <a id="contactUsBtn" class="btn-large waves-effect waves-light teal lighten-1">Contact Us</a>
       </div>
       <br><br>
@@ -55,17 +53,32 @@
 
 <div class="container">
   <div class="section">
-    <ul class="collapsible">
+    <ul class="collapsible" id="stock-collapsible">
       <li>
         <div class="collapsible-header"><i class="material-icons">flash_on</i>Stock</div>
         <div class="collapsible-body">
           <p>Your stock-related content goes here.</p>
+          <select id="stockSelect">
+            <option value="TSLA">Tesla (TSLA)</option>
+            <option value="GOOG">Alphabet (GOOG)</option>
+            <option value="APPL">Apple (APPL)</option>
+          </select>
         </div>
       </li>
+    </ul>
+  </div>
+  <div class="section">
+    <ul class="collapsible" id="currency-collapsible">
       <li>
         <div class="collapsible-header"><i class="material-icons">group</i>Currency</div>
         <div class="collapsible-body">
           <p>Your currency-related content goes here.</p>
+          <div id="stockInfo">
+    <p><strong>Symbol:</strong> <span id="stockSymbol"></span></p>
+    <p><strong>Last Traded Price:</strong> <span id="lastPrice"></span></p>
+    <p><strong>Trading Volume:</strong> <span id="volume"></span></p>
+    <p><strong>Exchange Rate:</strong> <span id="exchangeRate"></span></p>
+  </div>
         </div>
       </li>
     </ul>
