--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
   <div class="section">
     <ul class="collapsible">
       <li>
-        <div class="collapsible-header"><i class="material-icons">flash_on</i>Stock</div>
+        <div class="collapsible-header"><i class="material-icons" id="Stock">flash_on</i>Stock</div>
         <div class="collapsible-body">
           <p>Your stock-related content goes here.</p>
         </div>
       </li>
       <li>
-        <div class="collapsible-header"><i class="material-icons">group</i>Currency</div>
+        <div class="collapsible-header"><i class="material-icons" id="Currency">group</i>Currency</div>
         <div class="collapsible-body">
           <p>Your currency-related content goes here.</p>
         </div>
