--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
   <h1><strong>Stock Globe Trotter</strong></h1>
 </div>
 
-<div id="index-banner" class="parallax-container" >
-  <div class="section no-pad-bot">
-    <div class="container">
+    <div class="container" style="margin: 0; padding: 0;">
       <br><br>
       <h1 class="header center teal-text text-lighten-2"></h1>
       <div class="row center">
@@ -36,6 +34,7 @@
     </div>
   </div>
 </div>
+
 
 <!-- GitHub Links on the right side -->
 <div class="github-links">
@@ -62,11 +61,16 @@
             <option value="TSLA">Tesla (TSLA)</option>
             <option value="GOOG">Alphabet (GOOG)</option>
             <option value="APPL">Apple (APPL)</option>
+            <p><strong>Symbol:</strong> <span id="stockSymbol"></span></p>
+            <p><strong>Last Traded Price:</strong> <span id="lastPrice"></span></p>
+            <p><strong>Trading Volume:</strong> <span id="volume"></span></p>
+            <p><strong>Exchange Rate:</strong> <span id="exchangeRate"></span></p>
           </select>
         </div>
       </li>
     </ul>
   </div>
+  
   <div class="section">
     <ul class="collapsible" id="currency-collapsible">
       <li>
@@ -74,10 +78,7 @@
         <div class="collapsible-body">
           <p>Your currency-related content goes here.</p>
           <div id="stockInfo">
-    <p><strong>Symbol:</strong> <span id="stockSymbol"></span></p>
-    <p><strong>Last Traded Price:</strong> <span id="lastPrice"></span></p>
-    <p><strong>Trading Volume:</strong> <span id="volume"></span></p>
-    <p><strong>Exchange Rate:</strong> <span id="exchangeRate"></span></p>
+ 
   </div>
         </div>
       </li>
