added css styles

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="collapsible-body">
           <p>Your stock-related content goes here.</p>
           <select id="stockSelect">
-            <option value="TSLA">Tesla (TSLA)</option>
+            <li><option value="TSLA">Tesla (TSLA)</option></li>
             <option value="GOOG">Alphabet (GOOG)</option>
             <option value="APPL">Apple (APPL)</option>
           </select>
