dropdown clickable links inhtml and css touch up

--- a/index.html
+++ b/index.html
@@ -49,16 +49,10 @@
       <li>
         <div class="collapsible-header"><i class="material-icons">flash_on</i>Stock</div>
         <div class="collapsible-body">
-          <p>Your stock-related content goes here.</p>
-          <select id="stockSelect">
-            <option value="TSLA">Tesla (TSLA)</option>
-            <option value="GOOG">Alphabet (GOOG)</option>
-            <option value="APPL">Apple (APPL)</option>
-            <p><strong>Symbol:</strong> <span id="stockSymbol"></span></p>
-            <p><strong>Last Traded Price:</strong> <span id="lastPrice"></span></p>
-            <p><strong>Trading Volume:</strong> <span id="volume"></span></p>
-            <p><strong>Exchange Rate:</strong> <span id="exchangeRate"></span></p>
-          </select>
+            <a href= "#TSLA">Tesla (TSLA)</a><br>
+            <a href="#GOOG">Alphabet (GOOG)</a><br>
+            <a href="#APPL">Apple (APPL)</a><br>
+            
         </div>
       </li>
     </ul>
@@ -68,8 +62,9 @@
       <li>
         <div class="collapsible-header"><i class="material-icons">group</i>Currency</div>
         <div class="collapsible-body">
-          <p>Your currency-related content goes here.</p>
-          <div id="stockInfo">
+          <a href= "#USD">United States dollar($) </a><br>
+          <a href="#EUR">Euro (€)</a><br>
+          <a href="#JPY">Japanese Yen(￥)</a><br>
   </div>
         </div>
       </li>
