Refactored most JS to include jQuery, Changed Euro to GBP in Currency dropdown, Created stock info display grid.

--- a/index.html
+++ b/index.html
@@ -61,13 +61,21 @@
       <li>
         <div class="collapsible-header"><i class="material-icons">group</i>Currency</div>
         <div class="collapsible-body">
-          <a href= "#USD">United States dollar($) </a><br>
-          <a href="#EUR">Euro (€)</a><br>
-          <a href="#JPY">Japanese Yen(￥)</a><br>
+          <a href= "#USD">United States dollar ($) </a><br>
+          <a href="#EUR">(GBP)Pound Sterling (£)</a><br>
+          <a href="#JPY">Japanese Yen (￥)</a><br>
   </div>
         </div>
       </li>
     </ul>
+  </div>
+</div>
+<div class="stockInfoContainer">
+  <div id="stockInfo">
+    <p id="stockSymbol">Symbol: </p>
+    <p id="lastPrice">Last Traded Price: </p>
+    <p id="volume">Trading Volume: </p>
+    <p id="exchangeRate">Exchange Rate: </p>
   </div>
 </div>
 <!-- Moved "About" to footer -->
