--- a/index.html
+++ b/index.html
@@ -14,35 +14,7 @@
 <!-- Jumbotron title -->
 <div class="jumbotron container-fluid mt-2 text-center p-2" style="background-image: linear-gradient(50deg, #079ED8 0%, #0160A2 100%);">
   <h1><strong>Stock Globe Trotter</strong></h1>
-</div>
-    <div class="container" style="margin: 0; padding: 0;">
-      <br><br>
-      <h1 class="header center teal-text text-lighten-2"></h1>
-      <div class="row center">
-        <h5 class="header col s12 light"></h5>
-      </div>
-      <div class="contact-section">
-        <a href="https://github.com/evan-hatley/StockGlobetrotter" class="btn-large waves-effect waves-light teal lighten-1">Github Repository</a>
-        <!-- Made Contact Us button to Display Contact Information -->
-        <a id="contactUsBtn" class="btn-large waves-effect waves-light teal lighten-1">Contact Us</a>
-      </div>
-      <br><br>
-    </div>
-  </div>
-  </div>
-<!-- GitHub Links on the right side -->
-<div class="github-links">
-    <!-- Close button -->
-    <span class="close-button" id="close-button">X</span>
-  <h4>Connect with us!</h4>
-  <!-- Add Button that can be used by java script to close the section. -->
-  <ul>
-    <li><a href="https://github.com/evan-hatley">Evan Hatley</a></li>
-    <li><a href="https://github.com/KKBellew">Kayleena Bellew</a></li>
-    <li><a href="https://github.com/DylanOzzy">Dylan Osborn</a></li>
-    <li><a href="https://github.com/MayaH2000">Maya Hernandez</a></li>
-  </ul>
-</div>
+
 <div class="container">
   <div class="section">
     <ul class="collapsible" id="stock-collapsible">
@@ -89,24 +61,32 @@
   </div>
   <div class="parallax"></div>
 </div>
-<footer class="page-footer teal">
+<footer class="page-footer">
   <div class="container">
     <div class="row">
-      <h5 class="white-text"></h5>
-      <h4>About Stock Globe Trotter</h4>
-      <h5>User Story</h5>
-      <p>
-        AS AN Investor who travels
-      </p>
-      <p>
-        I WANT to keep track of my stock's exchange rate for where I am
-      </p>
-      <p>
-        SO I know my stock's value in relation to my location.
-      </p>
-      <h5>Technologies Used</h5>
-      <p>The two APIs we used in this project are the <a class="black-text" href="https://docs.data.nasdaq.com/">NASDAQ
-          Data API</a> and <a class="black-text" href="https://exchangeratesapi.io/">ExchangeRates API</a></p>
+      <div class="contact-section">
+        <a href="https://github.com/evan-hatley/StockGlobetrotter" class="btn-large waves-effect waves-light teal lighten-1">Github Repository</a>
+        <!-- Made Contact Us button to Display Contact Information -->
+        <a id="contactUsBtn" class="btn-large waves-effect waves-light teal lighten-1">Contact Us</a>
+      </div>
+      <br><br>
+    </div>
+  </div>
+  </div>
+<!-- GitHub Links on the right side -->
+<div class="github-links">
+    <!-- Close button -->
+    <span class="close-button" id="close-button">X</span>
+  <h4>Connect with us!</h4>
+  <!-- Add Button that can be used by java script to close the section. -->
+  <ul>
+    <li><a href="https://github.com/evan-hatley">Evan Hatley</a></li>
+    <li><a href="https://github.com/KKBellew">Kayleena Bellew</a></li>
+    <li><a href="https://github.com/DylanOzzy">Dylan Osborn</a></li>
+    <li><a href="https://github.com/MayaH2000">Maya Hernandez</a></li>
+  </ul>
+</div>
+
       <p class="grey-text text-lighten-4"></p>
     </div>
   </div>
