Fixed currency option

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li>
         <div class="collapsible-header"><i class="material-icons">group</i>Currency</div>
         <div class="collapsible-body">
-          <a href= "#USD">United States dollar ($) </a><br>
+          <a href= "#CAD">Canadian Dollar ($) </a><br>
           <a href="#EUR">(GBP)Pound Sterling (£)</a><br>
           <a href="#JPY">Japanese Yen (￥)</a><br>
   </div>
