--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="collapsible-header"><i class="material-icons">group</i>Currency</div>
         <div class="collapsible-body">
           <a href= "#CAD">Canadian Dollar ($) </a><br>
-          <a href="#EUR">(GBP)Pound Sterling (£)</a><br>
+          <a href="#GBP">(GBP)Pound Sterling (£)</a><br>
           <a href="#JPY">Japanese Yen (￥)</a><br>
   </div>
         </div>
