Added function to request information from YHFinance API and display information in HTML

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <li>
         <div class="collapsible-header"><i class="material-icons">flash_on</i>Stock</div>
         <div class="collapsible-body">
-          <a href= "#TSLA">Tesla (TSLA)</a><br>
-            <a href="#GOOG">Alphabet (GOOG)</a><br>
-            <a href="#APPL">Apple (APPL)</a><br>
+          <a id="tsla" href= "#TSLA">Tesla (TSLA)</a><br>
+            <a id="goog" href="#GOOG">Alphabet (GOOG)</a><br>
+            <a id="aapl" href="#APPL">Apple (APPL)</a><br>
         </div>
       </li>
     </ul>
@@ -44,10 +44,10 @@
 </div>
 <div class="stockInfoContainer">
   <div id="stockInfo">
-    <p id="stockSymbol">Symbol: </p>
-    <p id="lastPrice">Last Traded Price: </p>
-    <p id="volume">Trading Volume: </p>
-    <p id="exchangeRate">Exchange Rate: </p>
+    <p id="stockSymbol"> |</p>
+    <p id="lastPrice"> |</p>
+    <p id="volume">|</p>
+    <p id="exchangeRate">|</p>
   </div>
 </div>
 <!-- Moved "About" to footer -->
