Changed placeholder text for Stock Info Container.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 </div>
 <div class="stockInfoContainer">
   <div id="stockInfo">
-    <p id="stockSymbol"> |</p>
-    <p id="lastPrice"> |</p>
-    <p id="volume">|</p>
-    <p id="exchangeRate">|</p>
+    <p id="stockSymbol"> Stock Ticker</p>
+    <p id="lastPrice"> Last Traded Price</p>
+    <p id="volume">Todays Traded Volume</p>
+    <p id="exchangeRate">Exchange Rate</p>
   </div>
 </div>
 <!-- Moved "About" to footer -->
