--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <li>
         <div class="collapsible-header"><i class="material-icons">group</i>Currency</div>
         <div class="collapsible-body">
-          <a href= "#CAD">Canadian Dollar ($) </a><br>
-          <a href="#GBP">(GBP)Pound Sterling (£)</a><br>
-          <a href="#JPY">Japanese Yen (￥)</a><br>
+          <a href= "#CAD" id="CAD">Canadian Dollar ($) </a><br>
+          <a href="#GBP" id="GBP">(GBP)Pound Sterling (£)</a><br>
+          <a href="#JPY" id="JPY">Japanese Yen (￥)</a><br>
   </div>
         </div>
       </li>
